完善order-service：添加事件发布、分布式锁、指标监控、异常处理